--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://BartoszJS.github.io/password-generator",
+  "homepage": "http://bartoszjs.github.io/password-generator",
   "name": "password-generator",
   "version": "0.1.0",
   "private": true,
